Fix overflow on body for iOS devices caused by overflowing tile rows

--- a/src/styles/body/_body.scss
+++ b/src/styles/body/_body.scss
@@ -1,3 +1,8 @@
+html {
+  // For overflowing tile rows
+  overflow-x: hidden;
+}
+
 body {
   background: $mc-color-background;
   color: $mc-color-text;
